--- a/stm32f303/pca9685/MDK-ARM/pca9685.uvprojx
+++ b/stm32f303/pca9685/MDK-ARM/pca9685.uvprojx
@@ -407,6 +407,11 @@
               <FileType>1</FileType>
               <FilePath>../Src/stm32f3xx_hal_msp.c</FilePath>
             </File>
+            <File>
+              <FileName>pca9685.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\pca9685.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
